# i18n_subsites

./: CHANGELOG.md  pyproject.toml
pelican/plugins/i18n_subsites/: __init__.py
