[tool.poetry]
name = "i18n_subsites"
version = "1.0"
description = "Pelican plugin for creating internationalized sub-sites for the default site."
readme = "README.rst"
authors = ["Ondrej Grover <ondrej.grover@gmail.com>", "Oliver Urs Lenz <oliver.urs.lenz@gmail.com>", "Mandaris <info@mandarismoore.com>", "Lucas Cimon <lucas.cimon@gmail.com>", "lioman <dev@lioman.de>", "Kernc <kerncece@gmail.com>", "Jorge Maldonado Ventura <jorgesumle@freakspot.net>", "ivanhercaz <ivan@ivanhercaz.com>", "Deniz Turgut <dturgut@gmail.com>"]
keywords = ["pelican", "plugin"]
repository = "https://github.com/schtobia/i18n_subsites"
packages = [{ include = "pelican" }]
include = ["CHANGELOG.md", "README.rst", "pelican"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Documentation" = "https://docs.getpelican.com/"
"Funding" = "https://donate.getpelican.com/"
"Source" = "https://github.com/schtobia/i18n_subsites"
"Tracker" = "https://github.com/schtobia/i18n_subsites/issues"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
pelican = "^4.8.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.poetry.group.dev.dependencies]
markdown = "^3.4.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
